# faker-dxgi-rs

./: Cargo.toml
.github/workflows/: build.yml
core/: Cargo.toml  build.rs
core/src/: lib.rs
d3d11/: Cargo.toml
d3d11/src/: lib.rs
d3d12/: Cargo.toml
d3d12/src/: lib.rs
dxgi/: Cargo.toml
dxgi/src/: lib.rs
dxvk/: Cargo.toml
dxvk/src/: lib.rs
src/: lib.rs
