[package]
name = "faker-dxgi"
version = "0.1.0"
edition = "2021"

[lib]
name = "dxgi"
crate-type = ["cdylib"]

[dependencies]
faker-core = { path = "../core" }
windows = { version = "0.56", features = [
  "Win32_Foundation",
  "Win32_System_LibraryLoader",
  "Win32_System_SystemServices",
] }
tracing = { version = "0.1", optional = true }

[features]
debug-log = ["faker-core/debug-log", "tracing"]
